# i-learn-rust

./: .env.example  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs
src/: lib.rs  main.rs
src/dto/: user.rs
src/entity/: user.rs
src/infra/: db.rs
src/routes/: mod.rs  root_handler.rs  server.rs
src/routes/root/: user_handler.rs
src/services/: root.rs  user.rs
src/utils/: env.rs
