[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = "0.3.22"
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
    "with-rust_decimal",
    "with-chrono",
    "with-uuid",
] }
migration = { path = "migration" }
chrono = "0.4.43"
uuid = { version = "1.20.0", features = ["v4"] }

[workspace]
members = [".", "migration"]
